--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<img src="assets/images/background.jpg" class="background-image">
 
-	<div class="jumbotron container-fluid title-div green-background white-text text-center">
+	<div class="jumbotron container title-div green-background white-text text-center">
 		<h1>Train Schedule for Some Area</h1><br><h3>....or something</h3>
 	</div>
 
@@ -30,7 +30,7 @@
 			<div class="card-block">
 				<table class="table white-text">
 					<thead>
-						<tr>
+						<tr class="table-headers">
 							<th>Train Name</th>
 							<th>Destination</th>
 							<th>Frequency (min)</th>
@@ -55,7 +55,7 @@
 						<input type="text" class="form-control" id="name-input" placeholder="The Orient Express">
 					</div>
 					<div class="form-group">
-						<label for="destination-input">Destination</label>
+						<label for="destination-input align-top">Destination</label>
 						<input type="text" class="form-control" id="destination-input" placeholder="Paris">
 					</div>
 					<div class="form-group">
